--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
     
     <!-- fix this -->
     
-    <form action = "{{url_for('home')}}" method = "post">
+    <form action = "{{url_for('index')}}" method = "post">
         <input class= "mainInput" type = "text" name = "moviename" placeholder = "Movie Name" required = "required" />
         
         <button type = "submit" class = "btn">Recommend</button>
