--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
         <title>Movie Recommender</title>
         <link rel="stylesheet" href="{{ url_for('static',    filename='css/template.css') }}">
         <link href="//fonts.googleapis.com/css?family=Raleway" rel= "stylesheet">
+        <link href="http://fonts.cdnfonts.com/css/franchise" rel="stylesheet">
                          
         <style>
             @import url('http://fonts.cdnfonts.com/css/franchise');
