--- a/templates/positive.html
+++ b/templates/positive.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <title>RECS</title>
         <link rel="stylesheet" href="{{ url_for('static',    filename='css/template.css') }}">
-        
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
         <link href="http://fonts.cdnfonts.com/css/franchise" rel="stylesheet">
         <link href="//fonts.googleapis.com/css?family=Raleway" rel= "stylesheet">
        
