--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="{{ url_for('static',    filename='css/template.css') }}">
         <link href="//fonts.googleapis.com/css?family=Raleway" rel= "stylesheet">
         <link href="http://fonts.cdnfonts.com/css/franchise" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
                          
         <style>
             @import url('http://fonts.cdnfonts.com/css/franchise');
