--- a/templates/negative.html
+++ b/templates/negative.html
@@ -8,6 +8,7 @@
     
         <link href="http://fonts.cdnfonts.com/css/franchise" rel="stylesheet">
         <link href="//fonts.googleapis.com/css?family=Raleway" rel= "stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
     
     </head>
 
