--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,10 @@
         <link href="//fonts.googleapis.com/css?family=Raleway" rel= "stylesheet">
         <link href="http://fonts.cdnfonts.com/css/franchise" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
+        
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
                          
         <style>
             @import url('http://fonts.cdnfonts.com/css/franchise');
