--- a/static/css/template.css
+++ b/static/css/template.css
@@ -12,14 +12,14 @@
 }
 body{
     color: #B08401;  
-    font-family: "Open Sans", sans-serif;
+    font-family: 'Bebas Neue', cursive;
    
 }
 
 h1{
     margin-left: 23%;
     font-size: 55pt; 
-    font-family: "Open Sans", sans-serif;
+    font-family: 'Bebas Neue', cursive;
 }
 
 
